# NoteCypher-Desktop

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART_FULL.md  README.md  build_rust.bat
logs/: log 1.txt
src/: main.rs  pdf_processor.rs  theme_style.rs
